--- a/DSTableView/Base.lproj/Main.storyboard
+++ b/DSTableView/Base.lproj/Main.storyboard
@@ -6,13 +6,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Root View Controller-->
         <scene sceneID="eJo-R0-Tlw">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Uj1-se-UCT" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="EDk-bL-egn" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Nax-Kh-uuA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -25,6 +25,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="n4S-zf-tOU"/>
                 </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uj1-se-UCT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2186" y="-179"/>
         </scene>
@@ -45,7 +46,38 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xhe-bf-Urd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2186" y="597"/>
+            <point key="canvasLocation" x="3289" y="-73"/>
+        </scene>
+        <!--Setting View Controller-->
+        <scene sceneID="zaj-bN-Y21">
+            <objects>
+                <viewController id="5De-jM-vQo" customClass="SettingViewController" customModule="DSTableView" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="N50-Hq-jSh">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="p30-DF-hw1">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="p30-DF-hw1" firstAttribute="top" secondItem="N50-Hq-jSh" secondAttribute="top" id="N48-VE-VFd"/>
+                            <constraint firstItem="p30-DF-hw1" firstAttribute="trailing" secondItem="mCx-mF-1bq" secondAttribute="trailing" id="NhG-dd-AbP"/>
+                            <constraint firstItem="p30-DF-hw1" firstAttribute="leading" secondItem="mCx-mF-1bq" secondAttribute="leading" id="bNR-BS-bxe"/>
+                            <constraint firstItem="p30-DF-hw1" firstAttribute="bottom" secondItem="mCx-mF-1bq" secondAttribute="bottom" id="dVs-wF-iAQ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="mCx-mF-1bq"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="whD-5z-1jz"/>
+                    <connections>
+                        <outlet property="tableView" destination="p30-DF-hw1" id="iDs-eA-klG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9pk-RJ-dh4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2185" y="597"/>
         </scene>
         <!--Item-->
         <scene sceneID="uo4-I2-12a">
@@ -57,7 +89,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="Mev-1H-DxW" kind="relationship" relationship="rootViewController" id="ngy-s9-V94"/>
+                        <segue destination="5De-jM-vQo" kind="relationship" relationship="rootViewController" id="zSU-0D-ZMg"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vDB-e6-W4m" userLabel="First Responder" sceneMemberID="firstResponder"/>
